- Fixed:   . Memory leak in pg_delete() when using PGSQL_DML_STRING.   . Bug #24679 (pg_insert problem!)   . Bug #35996 (pg_meta_data should take the schema into account)   . Bug #40808 (pg_insert problem)   . Bug #42078 (pg_meta_data mix tables metadata from different schemas) - Improved:   . Error messages - Added   . Tests